cli/tests/testdata/run/092_import_map_unmapped_bare_specifier.ts.out
error: Uncaught (in promise) TypeError: Relative import path "unmapped" not prefixed with / or ./ or ../
    at file://[WILDCARD]/092_import_map_unmapped_bare_specifier.ts:1:14

await import("unmapped");
^
    at async file://[WILDCARD]/092_import_map_unmapped_bare_specifier.ts:1:1
